[NOISSUE] refactored added pages, enhanced security and stuff
