# src/main/java/com/flockinger/spongeblogSP/dto/PostsPage.java
@@ -2,12 +2,34 @@ package com.flockinger.spongeblogSP.dto;
 
 import java.util.List;
 
-public class PostsPage {
-  private List<PostPreviewDTO> previewPosts;
-  private Boolean hasNext;
-  private Boolean hasPrevious;
-  private Integer totalPages;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModelProperty;
+import javax.validation.Valid;
 
+/**
+ * PostsPage
+ */
+
+public class PostsPage   {
+  @JsonProperty("previewPosts")
+  private List<PostPreviewDTO> previewPosts = null;
+
+  @JsonProperty("hasNext")
+  private Boolean hasNext = null;
+
+  @JsonProperty("hasPrevious")
+  private Boolean hasPrevious = null;
+
+  @JsonProperty("totalPages")
+  private Integer totalPages = null;
+
+   /**
+   * Preview posts
+   * @return previewPosts
+  **/
+  @ApiModelProperty(value = "Preview posts")
+
+  @Valid
 
   public List<PostPreviewDTO> getPreviewPosts() {
     return previewPosts;
@@ -17,6 +39,13 @@ public class PostsPage {
     this.previewPosts = previewPosts;
   }
 
+   /**
+   * Is a next page existing.
+   * @return hasNext
+  **/
+  @ApiModelProperty(value = "Is a next page existing.")
+
+
   public Boolean getHasNext() {
     return hasNext;
   }
@@ -24,6 +53,13 @@ public class PostsPage {
   public void setHasNext(Boolean hasNext) {
     this.hasNext = hasNext;
   }
+
+   /**
+   * Is a previous page existing.
+   * @return hasPrevious
+  **/
+  @ApiModelProperty(value = "Is a previous page existing.")
+
 
   public Boolean getHasPrevious() {
     return hasPrevious;
@@ -33,6 +69,13 @@ public class PostsPage {
     this.hasPrevious = hasPrevious;
   }
 
+   /**
+   * Total count of pages.
+   * @return totalPages
+  **/
+  @ApiModelProperty(value = "Total count of pages.")
+
+
   public Integer getTotalPages() {
     return totalPages;
   }
@@ -40,6 +83,5 @@ public class PostsPage {
   public void setTotalPages(Integer totalPages) {
     this.totalPages = totalPages;
   }
-
-
+ 
 }
