# src/main/java/com/flockinger/spongeblogSP/exception/InvalidTokenException.java
@@ -1,0 +1,12 @@
+package com.flockinger.spongeblogSP.exception;
+
+public class InvalidTokenException extends Exception {
+  /**
+   * 
+   */
+  private static final long serialVersionUID = -4348829289991320666L;
+
+  public InvalidTokenException(String message) {
+    super(message);
+  }
+}
